--- a/views/index.erb
+++ b/views/index.erb
@@ -76,7 +76,7 @@
                             <div class="nerv" title="Developed for nerv"></div>
                         </div>
                         <div class="info">
-                            <h3><a href="http://damp-lake-3005.herokuapp.com/" target="_blank"   onclick="_gaq.push(['_trackEvent', 'projectclick', 'nerv']);" >The Hook</a></h3>
+                            <h3><a href="http://peaceful-brook-4633.herokuapp.com/" target="_blank"   onclick="_gaq.push(['_trackEvent', 'projectclick', 'nerv']);" >The Hook</a></h3>
                             <p>This is a job board where those seeking employment or employers post 140 "Hooks" to draw attention to their applications. It is written using Ruby on Rails, and bootstrap. </p>
                         </div>
                     </div>
