fixing small issues

--- a/views/index.erb
+++ b/views/index.erb
@@ -57,9 +57,35 @@
                     OTHERS
                 </a>
             </div>
-
+                    <div class="whatever">
+            <h2>Anchor Dashboard</h2>
+            <h2>This is a simple dashboard application that can be used for news anchors. It is written in just Ruby and utilizes four APIs.</h2>
             <div id="workPreview" class="animateWidth" style="margin: 0 auto;">
-              <div class="workItem" style="width:360px; height:341px; background-image:url('http://i38.photobucket.com/albums/e112/Tino221/ScreenShot2014-11-03at101222PM.png');"   onclick="_gaq.push(['_trackEvent', 'projectclick', 'tagstr']);" >
+            <a href="http://anchor-dashboard.herokuapp.com/" target="_blank">
+                <img src="http://i38.photobucket.com/albums/e112/Tino221/ScreenShot2014-11-03at101222PM.png" />
+                    </a>
+                    <br>
+                    <br>
+                    <br>
+
+
+            <h2>The Hook</h2>
+            <h2>This is a job board where those seeking employment or employers can post 140 character "Hooks". It is written using Ruby on Rails, and bootstrap.</h2>
+                    <a href="http://peaceful-brook-4633.herokuapp.com" target="_blank">
+                <img src="http://i38.photobucket.com/albums/e112/Tino221/ScreenShot2014-11-03at101006PM.png" />
+                    </a>
+
+                    <h2>Nonprofit Gift</h2>
+            <h2>Anonomous Gift is a site I developed for a friend of mine who runs a non-profit organization. Here nonprofits can logon and post gifts for underprivledged children around the holiday season. Donors can then logon and donate to these organizations anonomously. It is written in Ruby on Rails, Bootstrap and some special Javascript I used to create a snow effect.</h2>
+
+
+
+                    <a href="http://anonomousgift.herokuapp.com" target="_blank">
+                <img src="http://i38.photobucket.com/albums/e112/Tino221/ScreenShot2014-11-03at101322PM.png" />
+                    </a>
+
+                </div>
+              <div class="workItem">
                     <div class="workItemTable">
                         <div class="mask">
                         </div>
@@ -70,18 +96,18 @@
                     </div>
                 </div>
 
-                <div class="workItem" style="width:360px; height:341px; background-image:url('http://i38.photobucket.com/albums/e112/Tino221/ScreenShot2014-11-03at101006PM.png');"   onclick="_gaq.push(['_trackEvent', 'projectclick', 'nerv']);" >
+                <div class="workItem">
                     <div class="workItemTable">
                         <div class="mask">
                             <div class="nerv" title="Developed for nerv"></div>
                         </div>
                         <div class="info">
-                            <h3><a href="http://peaceful-brook-4633.herokuapp.com/" target="_blank"   onclick="_gaq.push(['_trackEvent', 'projectclick', 'nerv']);" >The Hook</a></h3>
+                            <h3><a href="http://damp-lake-3005.herokuapp.com/" target="_blank"   onclick="_gaq.push(['_trackEvent', 'projectclick', 'nerv']);" >The Hook</a></h3>
                             <p>This is a job board where those seeking employment or employers post 140 "Hooks" to draw attention to their applications. It is written using Ruby on Rails, and bootstrap. </p>
                         </div>
                     </div>
                 </div>
-                <div class="workItem" style="width:360px; height:341px; background-image:url('http://i38.photobucket.com/albums/e112/Tino221/ScreenShot2014-11-03at101322PM.png');" onclick="_gaq.push(['_trackEvent', 'projectclick', 'clipperroundtheworld']);" >
+                <div class="workItem">
                     <div class="workItemTable">
                         <div class="mask">
                             <div class="nerv" title="Developed for nerv"></div>
@@ -120,7 +146,7 @@
                             </p>
 
                             <h3>Email</h3>
-                            <p><a href="larkinm2@gmail.com" onclick="_gaq.push(['_trackEvent', 'mailto', 'larkinm2@gmail.com']);" >larkinm2@gmail.com</a></p>
+                            <p>larkinm2@gmail.com</p>
                         </div>
                     </article>
                     <article>
